src/objects/Organizational_Unit_Equivalence__c.object
<CustomObject>
    <description>Equivalencia de las unidades organizativas para Digital Workplace</description>
    <fields>
        <fullName>Organizational_unit__c</fullName>
        <label>Organizational unit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_unit_code__c</fullName>
        <label>Organizational unit code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_unit_code_equivalence__c</fullName>
        <label>Organizational unit code equivalence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_unit_equivalence__c</fullName>
        <label>Organizational unit equivalence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Unidad Organizativa Equivalente</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organizational_unit_code__c</columns>
        <columns>Organizational_unit__c</columns>
        <columns>Organizational_unit_code_equivalence__c</columns>
        <columns>Organizational_unit_equivalence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Organizational Unit Equivalence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unidades Organizativas Equivalentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>